--- a/PDF2Image/wwwroot/test/pdf-online.html
+++ b/PDF2Image/wwwroot/test/pdf-online.html
@@ -143,6 +143,7 @@
                 console.log(m);
                 __app.items = [];
                 __app.file = m.FileName;
+                console.clear();
             });
             connection.on("RAW_PROCESS", function (m) {
                 console.log(m);
