--- a/Driver/wwwroot/index.html
+++ b/Driver/wwwroot/index.html
@@ -9,101 +9,189 @@
     <script src="js/all.min.js"></script>
 </head>
 <body>
-    <div id="app">
-        <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-white">
-            <a href="/" class="d-flex align-items-center flex-shrink-0 p-3 link-dark text-decoration-none border-bottom">
-                <svg class="bi me-2" width="30" height="24"><use xlink:href="#bootstrap" /></svg>
-                <span class="fs-5 fw-semibold">List group</span>
-            </a>
+    <div id="app" class="w-100 vh-100 position-relative d-inline-block">
+        <div id="loading" class="vh-100 w-100">
+            <div class="d-flex justify-content-center">
+                <div class="spinner-border text-warning" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </div>
+        <div id="header" class="d-flex justify-content-between flex-shrink-0 p-3 bg-dark w-100 border-bottom position-fixed top-0 hide">
+            <i class="bi bi-search fs-1 pe-2 text-muted"></i>
+            <span class="fs-1">List group</span>
+            <i class="bi bi-list fs-1 ps-2 text-muted" onclick="$('#menu').toggleClass('hide')"></i>
+        </div>
+        <div id="body" class="d-flex flex-column align-items-stretch flex-shrink-0 hide">
             <div class="list-group list-group-flush border-bottom scrollarea">
-                <a href="#" class="list-group-item list-group-item-action active py-3 lh-tight" aria-current="true">
+                <div v-for="item in folders" class="list-group-item list-group-item-action py-3 lh-tight">
                     <div class="d-flex w-100 align-items-center justify-content-between">
-                        <strong class="mb-1">List group item heading</strong>
-                        <small>Wed</small>
+                        <strong class="mb-1">
+                            <i class="bi-folder2-open fs-3 pe-1 text-warning"></i>
+                            {{item.name}}
+                        </strong>
+                        <small><i class="bi bi-check2 fs-2 text-muted"></i></small>
                     </div>
                     <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                        <strong class="mb-1">List group item heading</strong>
-                        <small class="text-muted">Tues</small>
-                    </div>
-                    <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                        <strong class="mb-1">List group item heading</strong>
-                        <small class="text-muted">Mon</small>
-                    </div>
-                    <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                </a>
-
-                <a href="#" class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                        <strong class="mb-1">List group item heading</strong>
-                        <small class="text-muted">Wed</small>
-                    </div>
-                    <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                        <strong class="mb-1">List group item heading</strong>
-                        <small class="text-muted">Tues</small>
-                    </div>
-                    <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                        <strong class="mb-1">List group item heading</strong>
-                        <small class="text-muted">Mon</small>
-                    </div>
-                    <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                        <strong class="mb-1">List group item heading</strong>
-                        <small class="text-muted">Wed</small>
-                    </div>
-                    <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                        <strong class="mb-1">List group item heading</strong>
-                        <small class="text-muted">Tues</small>
-                    </div>
-                    <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                        <strong class="mb-1">List group item heading</strong>
-                        <small class="text-muted">Mon</small>
-                    </div>
-                    <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                        <strong class="mb-1">List group item heading</strong>
-                        <small class="text-muted">Wed</small>
-                    </div>
-                    <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                        <strong class="mb-1">List group item heading</strong>
-                        <small class="text-muted">Tues</small>
-                    </div>
-                    <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                        <strong class="mb-1">List group item heading</strong>
-                        <small class="text-muted">Mon</small>
-                    </div>
-                    <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-                </a>
+                </div>
             </div>
         </div>
 
+        <ul id="menu" class="dropdown-menu dropdown-menu-dark mx-0 border-0 shadow position-fixed hide">
+            <li>
+                <button class="dropdown-item d-flex gap-2 align-items-center">
+                    <i class="bi-folder-plus pe-3 text-warning"></i>
+                    Create New Folder
+                </button>
+            </li>
+            <li>
+                <button class="dropdown-item d-flex gap-2 align-items-center">
+                    <i class="bi-folder-x pe-3 text-danger"></i>
+                    Delete Folder
+                </button>
+            </li>
+            <li><hr class="dropdown-divider"></li>
+            <li>
+                <button class="dropdown-item d-flex gap-2 align-items-center">
+                    <i class="bi-plus-circle pe-3 text-warning"></i>
+                    Create New File
+                </button>
+            </li>
+            <li>
+                <button class="dropdown-item d-flex gap-2 align-items-center">
+                    <i class="bi-trash pe-3 text-danger"></i>
+                    Delete File
+                </button>
+            </li>
+            <li>
+                <button class="dropdown-item d-flex gap-2 align-items-center">
+                    <i class="bi-files pe-3 text-warning"></i>
+                    Copy Content
+                </button>
+            </li>
+            <li>
+                <button class="dropdown-item d-flex gap-2 align-items-center">
+                    <i class="bi-pencil-square pe-3 text-warning"></i>
+                    Edit
+                </button>
+            </li>
+            <li>
+                <button class="dropdown-item d-flex gap-2 align-items-center">
+                    <i class="bi-cloud-upload pe-3 text-warning"></i>
+                    Upload
+                </button>
+            </li>
+            <li>
+                <button class="dropdown-item d-flex gap-2 align-items-center">
+                    <i class="bi-cloud-download pe-3 text-warning"></i>
+                    Download
+                </button>
+            </li>
+            <li><hr class="dropdown-divider"></li>
+            <li onclick="$('#login').toggleClass('hide')">
+                <button class="dropdown-item d-flex gap-2 align-items-center">
+                    <i class="bi-box-arrow-in-left pe-3 text-warning"></i>
+                    Login
+                </button>
+            </li>
+            <li onclick="$('#login').toggleClass('hide')">
+                <button class="dropdown-item d-flex gap-2 align-items-center">
+                    <i class="bi-box-arrow-in-right pe-3 text-warning"></i>
+                    Logout
+                </button>
+            </li>
+        </ul>
+
+        <div id="search" class="d-flex flex-column flex-shrink-0 p-0 bg-dark text-light position-fixed top-0 start-0">
+            <div class="d-flex align-items-center p-3 border-bottom">
+                <div class="input-group">
+                    <i class="input-group-text bi-search fs-4 bg-transparent text-light border-end-0"></i>
+                    <input type="text" class="form-control border-start-0 ps-0 bg-transparent text-light" placeholder="search">
+                </div>
+            </div>
+            <ul class="list-unstyled flex-fill d-flex flex-column">
+                <li class="mb-1 pt-2">
+                    <div class="pb-1 ps-2 text-muted">
+                        <i class="bi-folder2-open fs-5 pe-2"></i>
+                        <span>Group</span>
+                    </div>
+                    <ul class="ui-filter">
+                        <li v-for="group in groups">
+                            <i class="bi-check"></i>
+                            <span>{{group}}</span>
+                        </li>
+                    </ul>
+                </li>
+                <li class="mb-1 pt-1">
+                    <div class="pb-1 ps-2 text-muted">
+                        <i class="bi-check-all fs-5 pe-2"></i>
+                        <span>Type</span>
+                    </div>
+                    <ul id="doctype" class="ui-filter">
+                        <li v-for="type in types">
+                            <i class="bi-check"></i>
+                            <span>{{type.name}}</span>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <div class="pb-1 ps-2 text-muted pt-1">
+                        <i class="bi-tags fs-5 pe-2"></i>
+                        <span>Tags</span>
+                    </div>
+                </li>
+                <li class="mb-1 flex-fill" style="overflow:auto;">
+                    <ul id="doctype" class="ui-filter ms-auto">
+                        <li v-for="tag in tags">
+                            <i class="bi-check"></i>
+                            <span>{{tag}}</span>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+
+        <div id="login" class="modal d-block bg-secondary hide">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content rounded-5 shadow bg-dark">
+                    <div class="modal-header p-3 px-4 pb-3 border-bottom-0">
+                        <h2 class="fw-bold mb-0 text-light">Login</h2>
+                        <i class="bi-x-lg fs-5 text-light" onclick="$('#login').toggleClass('hide')"></i>
+                    </div>
+
+                    <div class="modal-body p-3 pt-0">
+                        <form class="">
+                            <div class="form-floating mb-3">
+                                <input type="email" class="form-control rounded-4 text-dark" id="floatingInput" placeholder="name@example.com">
+                                <label class="text-dark">Email address</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="password" class="form-control rounded-4 text-dark" id="floatingPassword" placeholder="Password">
+                                <label class="text-dark">Password</label>
+                            </div>
+                            <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Sign up</button>
+                            <small class="text-light">
+                                By clicking Sign up & Login, you agree to the terms of use.
+                            </small>
+                            <hr class="my-4">
+                            <h2 class="fs-5 fw-bold mb-3">Or use a third-party</h2>
+                            <button class="w-100 py-2 mb-2 btn btn-outline-warning rounded-4 text-light" type="submit">
+                                <i class="bi-twitter"></i>
+                                Login with Twitter
+                            </button>
+                            <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-4 text-light" type="submit">
+                                <i class="bi-facebook"></i>
+                                Login with Facebook
+                            </button>
+                            <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-4 text-light" type="submit">
+                                <i class="bi-github"></i>
+                                Login with GitHub
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="js/app.js"></script>
 </body>
