--- a/Driver/wwwroot/index.html
+++ b/Driver/wwwroot/index.html
@@ -18,6 +18,9 @@
                 </div>
             </div>
         </div>
+        <button onclick="$('#addcontent').toggleClass('hide');" class="position-fixed end-0 bottom-0 mb-1 me-1 btn bg-transparent" style="z-index:9;">
+            <i class="bi-plus-circle fs-1 text-warning"></i>
+        </button>
     </div>
     <script src="js/app.js"></script>
 </body>
